--- a/app/views/customer/order_forms/_seeding.html.erb
+++ b/app/views/customer/order_forms/_seeding.html.erb
@@ -89,7 +89,7 @@
 
 <div class="form-group">
   <div class="col-sm-10">
-    <%= f.submit "Place Order", class: "btn btn-success pull-right", id: "action_button" %>
+    <%= f.submit "Place Order", class: "btn btn-success pull-right", id: "action_button", disable_with: "Processing..." %>
   </div>
 </div>
 
