--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
     <!-- Container -->
     <div class="container">
       <div class="flash-container">
-        <%= bootstrap_flash %>
+        <%= v2_bootstrap_flash %>
       </div>
       <%= yield %>
     </div>
