--- a/app/views/admin/deposits/_form.html.erb
+++ b/app/views/admin/deposits/_form.html.erb
@@ -27,7 +27,7 @@
       <div class="control-group">
         <%= f.label :date, :class => 'control-label' %>
         <div class="controls">
-          <%= f.date_select :date, :class => 'date_select', :order => [:day, :month, :year] %>
+          <%= f.date_select :date, :class => 'date_select', :order => [:day, :month, :year], :start_year => 1995 %>
         </div>
       </div>
       <div class="control-group">
