--- a/app/views/shared/order_forms/_nursery.html.erb
+++ b/app/views/shared/order_forms/_nursery.html.erb
@@ -31,10 +31,8 @@
   </tr>
 
   <tr>
-    <th>SB No</th>
-    <td><%= order_form.sb_no %></td>
-    <th>PON</th>
-    <td><%= order_form.pon %></td>
+    <th colspan="2">PON</th>
+    <td colspan="2"><%= order_form.pon %></td>
   </tr>
 
   <tr>
