--- a/app/views/shared/order_forms/_seeding.html.erb
+++ b/app/views/shared/order_forms/_seeding.html.erb
@@ -44,12 +44,9 @@
     <td><%= order_form.grams_per_km %></td>
   </tr>
 
-
   <tr>
-    <th colspan="2">SB no</th>
-    <td colspan="2"><%= order_form.sb_no %></td>
-    <th>PON</th>
-    <td><%= order_form.pon %></td>
+    <th colspan="2">PON</th>
+    <td colspan="4"><%= order_form.pon %></td>
   </tr>
 
   <tr>
