--- a/app/views/layouts/v2/admin/_navbar.html.erb
+++ b/app/views/layouts/v2/admin/_navbar.html.erb
@@ -8,6 +8,19 @@
     <li><%= link_to "Nursery", catalogue_nursery_path %></li>
   </ul>
 </li>
+
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Reporting
+    <i class="fa fa-angle-down parent-symbol"></i></a>
+  <ul class="dropdown-menu">
+    <li><%= link_to "Seed Populations", spa_populations_admin_reports_path %></li>
+    <li><%= link_to "Nursery Seed sales", admin_reports_path %></li>
+    <li><%= link_to "Direct Seeding sales", admin_reports_path %></li>
+    <li><%= link_to "Seed Containment sheet", admin_reports_path %></li>
+    <li><%= link_to "Seeds on consigment", admin_reports_path %></li>
+    <li><%= link_to "Seeds on hold", admin_reports_path %></li>
+  </ul>
+</li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Management
     <i class="fa fa-angle-down parent-symbol"></i></a>
@@ -20,12 +33,10 @@
     <li><%= link_to "Collectors", admin_people_path(q: {:type_cont => "Collector"}) %></li>
     <li><%= link_to "Customer Profiles", admin_people_path(q: {:type_cont => "Customer"}) %></li>
     <li><%= link_to "Users", admin_users_path %></li>
-    <!--<li><%= link_to "Transfers", admin_transfers_path %></li>-->
     <li><%= link_to "Field Data Sheets", admin_deposits_path %></li>
-    <li><%= link_to "Stock Adjustments", admin_deposit_adjustments_path %></li>
-    <!--<li><%= link_to "Transactions", admin_transactions_path %></li>-->
     <li><%= link_to "Settings", admin_settings_path %></li>
     <li><%= link_to "CMS", "/cms-admin", target: "_blank" %></li>
+
     <li>
       <a href="<%= destroy_user_session_path %>" data-method="delete"><i class="icon fa fa-sign-out"></i>Logout</a>
     </li>
