closes #20 Add seed deposits

--- a/app/assets/stylesheets/v2/application.css
+++ b/app/assets/stylesheets/v2/application.css
@@ -11,6 +11,8 @@
  *= require_self
  *= require ./my_lib
  *= require ./bootstrap-tagsinput
+ *= require bootstrap-datepicker3
+
  */
 
 .media-thumb {
