--- a/app/views/layouts/v2/admin/_navbar.html.erb
+++ b/app/views/layouts/v2/admin/_navbar.html.erb
@@ -14,6 +14,7 @@
     <i class="fa fa-angle-down parent-symbol"></i></a>
   <ul class="dropdown-menu">
     <li><%= link_to "Seed Populations", spa_populations_admin_reports_path %></li>
+    <li><%= link_to "Seed Deposits", seed_deposits_admin_reports_path %></li>
     <li><%= link_to "Nursery Seed sales", admin_reports_path %></li>
     <li><%= link_to "Direct Seeding sales", admin_reports_path %></li>
     <li><%= link_to "Seed Containment sheet", admin_reports_path %></li>
