--- a/app/views/admin/reports/nursery_seed_sales.html.erb
+++ b/app/views/admin/reports/nursery_seed_sales.html.erb
@@ -1,11 +1,6 @@
 <%= content_for :page_title, "Nursery Seed Sales  #{export_to_excel_link}".html_safe %>
 
-<%= form_tag current_url, method: :get do %>
-    <%= text_field_tag :start_date, params[:start_date], class: "datepicker" %>  to
-    <%= text_field_tag :end_date, params[:end_date], class: "datepicker" %>
-    <%= submit_tag "Search" %>
-<% end %>
-
+<%= render "date_filter" %>
 
 <% unless @invalid_date %>
     <div>
