--- a/app/views/admin/reports/seed_deposits.xls.erb
+++ b/app/views/admin/reports/seed_deposits.xls.erb
@@ -16,7 +16,7 @@
       <Row>
       </Row>
       <Row>
-       <Cell><Data ss:Type="String">Lot No</Data></Cell>
+       <Cell><Data ss:Type="String">Lot Number</Data></Cell>
        <Cell><Data ss:Type="String">Species</Data></Cell>
        <Cell><Data ss:Type="String">Common Name</Data></Cell>
        <Cell><Data ss:Type="String">Region</Data></Cell>
