--- a/app/views/layouts/v2/admin/_navbar.html.erb
+++ b/app/views/layouts/v2/admin/_navbar.html.erb
@@ -16,8 +16,8 @@
     <li><%= link_to "Seed Populations", spa_populations_admin_reports_path %></li>
     <li><%= link_to "Seed Deposits", seed_deposits_admin_reports_path %></li>
     <li><%= link_to "Nursery Seed sales", nursery_seed_sales_admin_reports_path %></li>
-    <li><%= link_to "Direct Seeding sales", admin_reports_path %></li>
-    <li><%= link_to "Seed Containment sheet", admin_reports_path %></li>
+    <li><%= link_to "Direct Seeding sales", direct_seed_sales_admin_reports_path %></li>
+    <li><%= link_to "Seed Containment", seed_containment_admin_reports_path %></li>
     <li><%= link_to "Seeds on consigment", admin_reports_path %></li>
     <li><%= link_to "Seeds on hold", admin_reports_path %></li>
   </ul>
