adds seeds on consignment order closes #24

--- a/app/views/admin/reports/direct_seed_sales.xls.erb
+++ b/app/views/admin/reports/direct_seed_sales.xls.erb
@@ -44,8 +44,8 @@
             <Cell><Data ss:Type="String"><%= order_form.business_name %></Data></Cell>
             <Cell><Data ss:Type="String"><%= order_form.abn %></Data></Cell>
             <Cell><Data ss:Type="String"><%= order_form.property_address %></Data></Cell>
-            <Cell><Data ss:Type="String"><%= order.line_items.sum(:qty).to_f / 1000 %></Data></Cell>
-            <Cell><Data ss:Type="String"><%= order.total %></Data></Cell>
+            <Cell><Data ss:Type="Number"><%= order.line_items.sum(:qty).to_f / 1000 %></Data></Cell>
+            <Cell><Data ss:Type="Number"><%= order.total %></Data></Cell>
             </Row>
       <% end %>
     </Table>
