--- a/app/views/admin/orders/new.html.erb
+++ b/app/views/admin/orders/new.html.erb
@@ -1,5 +1,96 @@
-<%- model_class = Order -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
-</div>
-<%= render :partial => 'form' %>
+<%= nested_form_for([:admin, @order], remote: true, html: {id: "order_form"}) do |f| %>
+    <%= render_errors @order %>
+    <div class="modal-body">
+      <div class="control-group">
+        <label>Use Existing?</label>
+        <br>
+        <label>
+          <%= radio_button_tag 'use_existing', 'yes', true, class: "toggle-radio", "data-target" => "#existing_customer_fields", "data-hide" => "#new_customer_fields", disabled: !@order.pending? %>
+          Yes
+        </label>
+        <br>
+        <label>
+          <%= radio_button_tag 'use_existing', 'no', false, class: "toggle-radio", "data-target" => "#new_customer_fields", "data-hide" => "#existing_customer_fields", disabled: !@order.pending? %>
+          No
+        </label>
+      </div>
+
+
+      <div class="col-lg-5 pad0">
+        <div id="existing_customer_fields" class="field">
+          <%= f.label :customer_id, "Select Customer" %>
+          <br/>
+          <%= f.select :customer_id, Person::Customer.all.collect { |c| [c.full_name, c.id] }, {prompt: t(:please_select)}, class: "select2", disabled: !@order.pending? %>
+        </div>
+
+        <div id="new_customer_fields" style="display: none;">
+          <%= f.fields_for :customer, @order.build_customer do |c| %>
+              <strong>New Customer</strong>
+              <br>
+              <br>
+
+              <div class="field">
+                <%= c.label :first_name %>
+                <br/>
+                <%= c.text_field :first_name, disabled: !@order.pending? %>
+              </div>
+
+              <div class="field">
+                <%= c.label :last_name %>
+                <br/>
+                <%= c.text_field :last_name, disabled: !@order.pending? %>
+              </div>
+
+              <div class="field">
+                <%= c.label :address_1 %>
+                <br/>
+                <%= c.text_field :address_1, disabled: !@order.pending? %>
+              </div>
+
+              <div class="field">
+                <%= c.label :address_2 %>
+                <br/>
+                <%= c.text_field :address_2, disabled: !@order.pending? %>
+              </div>
+
+              <div class="field">
+                <%= c.label :town %>
+                <br/>
+                <%= c.text_field :town, disabled: !@order.pending? %>
+              </div>
+
+              <div class="field">
+                <%= c.label :postcode %>
+                <br/>
+                <%= c.text_field :postcode, disabled: !@order.pending? %>
+              </div>
+
+              <div class="field">
+                <%= c.label :phone %>
+                <br/>
+                <%= c.text_field :phone, disabled: !@order.pending? %>
+              </div>
+
+              <div class="field">
+                <%= c.label :email %>
+                <br/>
+                <%= c.text_field :email, placeholder: "can be empty", disabled: !@order.pending? %>
+              </div>
+
+          <% end %>
+        </div>
+
+      </div>
+      <script>
+          $("#new_customer_fields").find('input,select').attr('disabled', true);
+      </script>
+
+    </div>
+
+
+    <div class="modal-footer">
+      <%= link_to "Cancel", "#", :class => "pull-left", :data => {:dismiss => 'modal'} %>
+      <%= f.submit "Next", :class => 'btn btn-primary' %>
+    </div>
+<% end %>
+
