--- a/app/views/layouts/v2/admin/_navbar.html.erb
+++ b/app/views/layouts/v2/admin/_navbar.html.erb
@@ -13,7 +13,7 @@
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Reporting
     <i class="fa fa-angle-down parent-symbol"></i></a>
   <ul class="dropdown-menu">
-    <li><%= link_to "Seed Populations", spa_populations_admin_reports_path %></li>
+    <li><%= link_to "SPA Populations", spa_populations_admin_reports_path %></li>
     <li><%= link_to "Seed Deposits", seed_deposits_admin_reports_path %></li>
     <li><%= link_to "Nursery Seed sales", nursery_seed_sales_admin_reports_path %></li>
     <li><%= link_to "Direct Seeding sales", direct_seed_sales_admin_reports_path %></li>
