--- a/app/views/admin/reports/spa_populations.html.erb
+++ b/app/views/admin/reports/spa_populations.html.erb
@@ -1,7 +1,7 @@
 <%= content_for :page_title, "SPA Populations  #{export_to_excel_link}".html_safe %>
 
 <div>
-  <table class="table table-bordered">
+  <table class="table table-striped marT30" id="table-1">
     <thead>
     <tr>
       <th>SPA Name</th>
@@ -33,4 +33,6 @@
     <% end %>
     </tbody>
   </table>
+  <table class="table table-striped col-md-12" id="header-fixed"></table>
+  <%= paginate @lot_numbers %>
 </div>
